add volume mount for external-lib and invoke serverRoot (app) to use it
https://github.com/metasfresh/metasfresh/issues/12892